modify swagger payment and user course
